2006-10-15  Thomas Schwinge  <tschwinge@gnu.org>

	* configure: Regenerate.

	* configure.ac: Update texts snippets: GNU Automake 1.10 has just been
	released.

	* i386/include/Makefile.in: Remove unused file.  Thanks to Guillem
	Jover for spotting this.

	[task #5956 --- ``Automake'ify GNU Mach's code base'']

	* configure: Regenerate.

	* configure.ac <config.status.dep.patch>: Point to [bug #18011 ---
	``GNU Mach: `make install-data' will build the ``to-be-generated
	files''''].

	* Makefile.in: Regenerate.

	* Makefrag.am (include_mach_exec): Rename to `include_mach_eXec'.

	* Makefile.in: New file, generated by `autoreconf'.
	* config.h.in: Likewise.
	* configure: Updated file, generated by `autoreconf'.

	* INSTALL: File updated, thanks to `autoreconf'.
	* aclocal.m4: Likewise.

	* build-aux/compile: New file, thanks to `autoreconf'.
	* build-aux/config.guess: Likewise.
	* build-aux/config.sub: Likewise.
	* build-aux/depcomp: Likewise.
	* build-aux/install-sh: Likewise.
	* build-aux/mdate-sh: Likewise.
	* build-aux/missing: Likewise.
	* build-aux/texinfo.tex: Likewise.

	* AUTHORS: New file, copy from the MIG repository.

	* kern/bootstrap.c: Don't include `bootstrap_symbols.h'.
	* ddb/db_command.c: Don't include `cpus.h'.
	* ddb/db_mp.c: Likewise.
	* i386/i386/ast_check.c: Likewise.
	* i386/i386/cswitch.S: Likewise.
	* i386/i386/db_interface.c: Likewise.
	* i386/i386/fpu.c: Likewise.
	* i386/i386/fpu.h: Likewise.
	* i386/i386/i386asm.sym: Likewise.
	* i386/i386/locore.S: Likewise.
	* i386/i386/mp_desc.c: Likewise.
	* i386/i386/mp_desc.h: Likewise.
	* i386/i386/pcb.c: Likewise.
	* i386/i386/trap.c: Likewise.
	* i386/intel/pmap.c: Likewise.
	* include/mach/machine.h: Likewise.
	* ipc/ipc_kmsg.c: Likewise.
	* ipc/ipc_kmsg.h: Likewise.
	* kern/ast.c: Likewise.
	* kern/ast.h: Likewise.
	* kern/cpu_number.h: Likewise.
	* kern/debug.c: Likewise.
	* kern/eventcount.c: Likewise.
	* kern/host.c: Likewise.
	* kern/ipc_sched.c: Likewise.
	* kern/lock.c: Likewise.